--- a/Pages/UserManagement/LGUStaff/Add.cshtml
+++ b/Pages/UserManagement/LGUStaff/Add.cshtml
@@ -113,8 +113,16 @@
     </div>
 </div>
 
+<!-- Format Mobile Number -->
 <script>
     const mobileInput = document.getElementById('mobileNum');
+
+    // Set initial values when the input fields receive focus
+    mobileInput.addEventListener('focus', function () {
+        if (!this.value.startsWith('09')) {
+            this.value = '09';
+        }
+    });
 
     mobileInput.addEventListener('input', function () {
         let cleanedValue = this.value.replace(/[^0-9]/g, '');
@@ -123,9 +131,12 @@
             cleanedValue = '09' + cleanedValue.slice(2);
         }
 
-        this.value = cleanedValue;
+        this.value = cleanedValue.slice(0, 11);
     });
+</script>
 
+<!-- Enable/disable "Submit" button -->
+<script>
     const submitButton = document.getElementById('submitBtn');
     const form = document.querySelector('form');
 
