--- a/Pages/family/add/Index.cshtml
+++ b/Pages/family/add/Index.cshtml
@@ -312,7 +312,7 @@
 	});
 </script>
 
-<!-- Mobile and Tel Number Formatting -->
+<!-- Format Mobile and Telephone Number -->
 <script>
 	const mobileInput = document.getElementById('mobileNum');
 	const telephoneInput = document.getElementById('telephoneNum');
@@ -337,7 +337,7 @@
 			cleanedValue = '09' + cleanedValue.slice(2);
 		}
 
-		this.value = cleanedValue;
+		this.value = cleanedValue.slice(0, 11);
 	});
 
 	telephoneInput.addEventListener('input', function () {
@@ -347,6 +347,6 @@
 			cleanedValue = '044' + cleanedValue.slice(3);
 		}
 
-		this.value = cleanedValue;
+		this.value = cleanedValue.slice(0, 10);
 	});
 </script>
