--- a/Pages/family/edit/Family.cshtml
+++ b/Pages/family/edit/Family.cshtml
@@ -117,6 +117,19 @@
 	const mobileInput = document.getElementById('mobileNum');
 	const telephoneInput = document.getElementById('telephoneNum');
 
+	// Set initial values when the input fields receive focus
+	mobileInput.addEventListener('focus', function () {
+		if (!this.value.startsWith('09')) {
+			this.value = '09';
+		}
+	});
+
+	telephoneInput.addEventListener('focus', function () {
+		if (!this.value.startsWith('044')) {
+			this.value = '044';
+		}
+	});
+
 	mobileInput.addEventListener('input', function () {
 		let cleanedValue = this.value.replace(/[^0-9]/g, '');
 
@@ -124,7 +137,7 @@
 			cleanedValue = '09' + cleanedValue.slice(2);
 		}
 
-		this.value = cleanedValue;
+		this.value = cleanedValue.slice(0, 11);
 	});
 
 	telephoneInput.addEventListener('input', function () {
@@ -134,7 +147,7 @@
 			cleanedValue = '044' + cleanedValue.slice(3);
 		}
 
-		this.value = cleanedValue;
+		this.value = cleanedValue.slice(0, 10);
 	});
 </script>
 
