--- a/Pages/family/add/Member.cshtml
+++ b/Pages/family/add/Member.cshtml
@@ -28,8 +28,7 @@
 <div class="bg-light rounded px-2 py-0 my-3">
 	<form method="POST" id="add-family">
 		<h1 class="display-5 fw-bold text-center">Add Family</h1>
-		<p class="text-center">Family Member</p>
-
+		<p class="form-label" style="text-align:center">Family Member</p>
 		<br />
 
 		<input type="hidden" asp-for="familyID" />
