--- a/Pages/UserManagement/Admin/Edit.cshtml
+++ b/Pages/UserManagement/Admin/Edit.cshtml
@@ -16,14 +16,10 @@
     <div class="col-lg-6 mx-auto">
         <form method="POST" id="editUserForm">
             <h1 class="display-5 fw-bold">Edit New User</h1>
-            <p>Admin</p>
+            <p class="form-label">Admin</p>
+            <br />
 
             <input type="hidden" name="userID" value="@Model.userID" /> 
-
-            <!-- User ID -->
-            <div class="row">
-                <label class="col-sm-4 col-form-label text-start">User ID: @Model.userID</label>
-            </div>
 
             <!-- Admin Name -->
             <div class="row">
