--- a/Pages/UserManagement/LGUStaff/Edit.cshtml
+++ b/Pages/UserManagement/LGUStaff/Edit.cshtml
@@ -16,7 +16,8 @@
     <div class="col-lg-6 mx-auto">
         <form method="POST" id="editUserForm">
             <h1 class="display-5 fw-bold">Edit User</h1>
-            <p>EC Staff</p>
+            <p class="form-label">EC Staff</p>
+            <br />
 
             <input type="hidden" name="userID" value="@Model.userID" />
 
