Done edit family member backend

--- a/Pages/Family/Profile/Index.cshtml
+++ b/Pages/Family/Profile/Index.cshtml
@@ -186,8 +186,8 @@
 														</a>
 													</li>
 													<li>
-														<a class="dropdown-item" href="/family/edit/member?memberID=@item.memberID">
-															Edit
+														<a class="dropdown-item" href="/family/edit/member?memberID=@item.memberID&familyID=@Model.familyInfo.familyID">
+															Edit Information
 														</a>
 													</li>
 												</ul>
