--- a/Pages/disaster/profile/inventory/Add.cshtml
+++ b/Pages/disaster/profile/inventory/Add.cshtml
@@ -72,7 +72,7 @@
 
 			<!-- Remarks -->
 			<div class="row mb-1">
-				<label class="col-sm-4 col-form-label text-start" for="remarks">Remarks:<span class="text-danger" style="padding:5px">*</span></label>
+				<label class="col-sm-4 col-form-label text-start" for="remarks">Remarks:</label>
 				<div class="col-sm-8">
 					<textarea class="form-control" name="remarks" value="@Model.inventoryInfo.remarks" rows="3" placeholder="ex. Donated by a private individual"></textarea>
 				</div>
