maraming binago dahil kay jeanne

--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -79,7 +79,7 @@
 				<th width="20%">Disaster</th>
 				<th width="15%">Type </th>
 				<th width="35%">Description</th>
-				<th width="15%">Date Occured</th>
+				<th width="15%">Date Occurred</th>
 				<th width="10%"></th>
 			</tr>
 		</thead>
