--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -96,8 +96,8 @@
 
 <div class="container form-container1">
     <div class="container form-container-content1">
-        <div class="row p-2">
-            <div class="col d-flex align-items-center">
+        <div class="row">
+            <div class="col d-flex align-items-center pb-2">
                 <h1>@Model.disasterInfo.disasterName</h1>
             </div>
 
