--- a/Pages/disaster/profile/entrylog/CheckIn.cshtml
+++ b/Pages/disaster/profile/entrylog/CheckIn.cshtml
@@ -25,7 +25,7 @@
 }
 
 <div class="bg-light rounded px-2 py-0 my-3">
-    <form method="POST" id="saveAllocateEC">
+    <form method="POST" id="checkIn">
         <h1 class="display-5 fw-bold text-center">Check-in Evacuee</h1>
 
         <br />
@@ -229,7 +229,6 @@
         });
     }
 </script>
-
 
 <!-- Check-in button in Modal -->
 <script>
