--- a/Pages/family/add/Member.cshtml
+++ b/Pages/family/add/Member.cshtml
@@ -166,7 +166,7 @@
 			<div class="col-md-6">
 				<div class="mb-3">
 					<label class="form-label">
-						Education:
+						Educational Attainment:
 						<span class="text-danger" style="padding: 5px">*</span>
 					</label>
 					<input type="text" class="form-control" name="education" value="@Model.memberInfo.education" required maxlength="45" />
