--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -101,7 +101,7 @@
                     </p>
                 </div>
 
-                <div class="p-4">
+                @*<div class="p-4">
                     <h4 class="fst-italic pb-1">Contact Us</h4>
                     <form id="contactForm">
                         <div class="mb-3">
@@ -122,7 +122,7 @@
 
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
-                </div>
+                </div>*@
             </div>
         </div>
     </div>
