Hide import csv and settings

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                     <li><a href="/ecstaff/index" class="nav-link px-3 text-white">EC Staff</a></li>
                     <li><a href="/inventory/index" class="nav-link px-3 text-white">Inventory</a></li>
                     <li><a href="/usermanagement/index" class="nav-link px-3 text-white">Users</a></li>
-                    <li><a href="/settings/index" class="nav-link px-3 text-white">Settings</a></li>
+                    @*<li><a href="/settings/index" class="nav-link px-3 text-white">Settings</a></li>*@
                 </ul>
                 @* <div class="flex-shrink-0 dropdown">
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
