--- a/Pages/Family/Index.cshtml
+++ b/Pages/Family/Index.cshtml
@@ -72,10 +72,10 @@
 		<div class="col-12 d-flex align-items-center justify-content-between">
 			<h1><i class="bi bi-people-fill" style="padding: 0 5px 0 5px;"></i>Family</h1>
 			<div class="d-flex justify-content-end align-items-center">
-				<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="/family">
+				@*<a class="btn btn-primary mb-2 button-spacing d-none d-sm-inline" href="/family">
 					<i class="bi bi-box-arrow-down"></i> Import .CSV File
 
-				</a>
+				</a>*@
 				<a class="btn btn-primary mb-2 d-none d-sm-inline" href="/family/add/index">
 					<i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Family
 				</a>
