--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -105,24 +105,26 @@
                 <!-- Button with text and icon (visible on larger screens) -->
                 <button id="toggleButton" class="btn d-none d-md-inline-block"
                         onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
-                        data-bs-toggle="modal" data-bs-target="#infoModal">
+                        data-bs-toggle="modal" data-bs-target="#infoModal"
+                        style="background-color: var(--bs-primary-color);color:white">
                     <i class="bi bi-info-circle-fill"></i> Info
                 </button>
 
                 <!-- Button with icon only (visible on smaller screens) -->
                 <button id="toggleButtonMobile" class="btn d-inline-block d-md-none"
                         onclick="showInfo('@Model.disasterInfo.disasterType', '@Model.disasterInfo.description', '@Model.disasterInfo.dateOccured')"
-                        data-bs-toggle="modal" data-bs-target="#infoModal">
+                        data-bs-toggle="modal" data-bs-target="#infoModal"
+                        style="background-color: var(--bs-primary-color);color:white">
                     <i class="bi bi-info-circle-fill"></i>
                 </button>
 
                 <!-- Button with text and icon (visible on larger screens) -->
-                <a id="toggleButton" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-none d-md-inline-block position-relative" role="button">
+                <a id="toggleButton" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-none d-md-inline-block position-relative" role="button" style="background-color: var(--bs-primary-color);color:white">
                     View More <i class="bi bi-arrow-right-circle"></i>
                 </a>
 
                 <!-- Button with text and icon (visible on smaller screens) -->
-                <a id="toggleButtonMobile" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline-block d-md-none" role="button">
+                <a id="toggleButtonMobile" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" class="btn d-inline-block d-md-none" role="button" style="background-color: var(--bs-primary-color);color:white">
                     <i class="bi bi-arrow-right-circle"></i>
                 </a>
             </div>
