Modified check-in table for responsive mode

--- a/Pages/Disaster/Profile/entrylog/Index.cshtml
+++ b/Pages/Disaster/Profile/entrylog/Index.cshtml
@@ -176,7 +176,9 @@
 												</a>
 												<ul class="dropdown-menu" aria-labelledby="recordOptions">
 													<li>
-														<a class="dropdown-item" href="/family/profile/index?familyID=@item.familyID">View Profile</a>
+														<a class="dropdown-item" href="/family/profile/index?familyID=@item.familyID">
+															View Family Profile
+														</a>
 													</li>
 													<li>
 														<a href="#" class="dropdown-item" onclick="showDatesPopup('@item.checkInDate', '@item.checkOutDate')"
